fix quiz card alignment

--- a/src/web/themes/custom/workbc_cdq/css/style.css
+++ b/src/web/themes/custom/workbc_cdq/css/style.css
@@ -13656,7 +13656,7 @@ footer #block-footerbclogo p {
 .slide.carousel .quiz_link {
   margin-top: 15px;
 }
-@media all and (min-width: 991.98px) and (max-width: 1110.98px) {
+@media all and (min-width: 991.98px) and (max-width: 1200px) {
   .slide.carousel .career .title-field h4, .slide.carousel .career .title-field .h4 {
     min-height: 60px;
   }
@@ -13712,7 +13712,7 @@ footer #block-footerbclogo p {
 .slide.carousel .career .item_3 a.quiz-link + a.result-link:hover {
   color: rgb(38, 113, 202);
 }
-@media all and (min-width: 991.98px) and (max-width: 1110.98px) {
+@media all and (min-width: 991.98px) and (max-width: 1200px) {
   .slide.carousel .personality .title-field h4, .slide.carousel .personality .title-field .h4 {
     min-height: 60px;
   }
